Block _aboutUs was fixed

--- a/index.html
+++ b/index.html
@@ -74,32 +74,32 @@
         </div>
         <div class="about-us__proposition"><h5>WE CAN HELP YOU WITH</h5></div>
         <div class="about-us__line flex">
-            <div class="about-us__block1">
-                <div class="about-us__block1__box box">
-                    <div class="about-us__block1__point point-padding"><img src="img/point.svg" alt="#">
+            <div class="about-us__block pink">
+                <div class="about-us__block__box box">
+                    <div class="about-us__block__point point-padding"><img src="img/point.svg" alt="#">
                     </div>
-                    <div class="about-us__block1__text"><h3>Weight Lifting</h3></div>
+                    <div class="about-us__block__text"><h3>Weight Lifting</h3></div>
                 </div>
             </div>
-            <div class="about-us__block2">
-                <div class="about-us__block2__box box">
-                    <div class="about-us__block2__point point-padding"><img src="img/point.svg" alt="#">
+            <div class="about-us__block greenLight">
+                <div class="about-us__block__box box">
+                    <div class="about-us__block__point point-padding"><img src="img/point.svg" alt="#">
                     </div>
-                    <div class="about-us__block2__text"><h3>Running & Spinning</h3></div>
+                    <div class="about-us__block__text"><h3>Running & Spinning</h3></div>
                 </div>
             </div>
-            <div class="about-us__block3">
-                <div class="about-us__block3__box box">
-                    <div class="about-us__block3__point point-padding"><img src="img/point.svg" alt="#">
+            <div class="about-us__block blue">
+                <div class="about-us__block__box box">
+                    <div class="about-us__block__point point-padding"><img src="img/point.svg" alt="#">
                     </div>
-                    <div class="about-us__block3__text"><h3>Pumping Iron</h3></div>
+                    <div class="about-us__block__text"><h3>Pumping Iron</h3></div>
                 </div>
             </div>
-            <div class="about-us__block4">
-                <div class="about-us__block4__box box">
-                    <div class="about-us__block4__point point-padding"><img src="img/point.svg" alt="#">
+            <div class="about-us__block lightBlue">
+                <div class="about-us__block__box box blue">
+                    <div class="about-us__block__point point-padding"><img src="img/point.svg" alt="#">
                     </div>
-                    <div class="about-us__block4__text"><h3>Pumping Iron</h3></div>
+                    <div class="about-us__block__text"><h3>Pumping Iron</h3></div>
                 </div>
             </div>
         </div>
