Refactor big part of progect

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Halping your trive</title>
 </head>
 <body>
-<div class="conteiner center">
+<div class="container center">
     <div class="top relative">
         <div class="top__main-picture absolute"><img src="img/top/main.svg" alt="#"></div>
         <div class="top__fon-picture absolute"><img src="img/top/fon.svg" alt="#"></div>
@@ -106,45 +106,45 @@
     </div>
     <!-- /.about-us -->
     <div class="offers flex">
-        <div class="offers__block1">
+        <div class="offers__block dark">
             <div class="offers__box box">
-                <div class="offers__block1__point point-padding"><img src="img/point.svg" alt="#"></div>
-                <div class="offers__block1__text"><h3>Physical Health</h3>
+                <div class="offers__block__point point-padding"><img src="img/point.svg" alt="#"></div>
+                <div class="offers__block__text"><h3>Physical Health</h3>
                 </div>
             </div>
         </div>
-        <div class="offers__block2">
+        <div class="offers__block lightBlue">
             <div class="offers__box box">
-                <div class="offers__block2__point point-padding"><img src="img/point.svg" alt="#"></div>
-                <div class="offers__block2__text"><h3>Mental Health</h3>
+                <div class="offers__block__point point-padding"><img src="img/point.svg" alt="#"></div>
+                <div class="offers__block__text"><h3>Mental Health</h3>
                 </div>
             </div>
         </div>
-        <div class="offers__block3">
+        <div class="offers__block picture">
             <div class="offers__box box">
-                <div class="offers__block3__point point-padding"><img src="img/point.svg" alt="#"></div>
-                <div class="offers__block3__text"><h3>Nutrition</h3>
+                <div class="offers__block__point point-padding"><img src="img/point.svg" alt="#"></div>
+                <div class="offers__block__text"><h3>Nutrition</h3>
                 </div>
             </div>
         </div>
-        <div class="offers__block4">
+        <div class="offers__block blue">
             <div class="offers__box box">
-                <div class="offers__block4__point point-padding"><img src="img/point.svg" alt="#"></div>
-                <div class="offers__block4__text"><h3>Gymnastics</h3>
+                <div class="offers__block__point point-padding"><img src="img/point.svg" alt="#"></div>
+                <div class="offers__block__text"><h3>Gymnastics</h3>
                 </div>
             </div>
         </div>
-        <div class="offers__block5">
+        <div class="offers__block coral">
             <div class="offers__box box">
-                <div class="offers__block5__point point-padding"><img src="img/point.svg" alt="#"></div>
-                <div class="offers__block5__text"><h3>Crossfit</h3>
+                <div class="offers__block__point point-padding"><img src="img/point.svg" alt="#"></div>
+                <div class="offers__block__text"><h3>Crossfit</h3>
                 </div>
             </div>
         </div>
-        <div class="offers__block6">
+        <div class="offers__block purple">
             <div class="offers__box box">
-                <div class="offers__block6__point point-padding"><img src="img/point.svg" alt="#"></div>
-                <div class="offers__block6__text"><h3>Aerobics</h3>
+                <div class="offers__block__point point-padding"><img src="img/point.svg" alt="#"></div>
+                <div class="offers__block__text"><h3>Aerobics</h3>
                 </div>
             </div>
         </div>
