--- a/index.html
+++ b/index.html
@@ -10,21 +10,27 @@
 </head>
 <body>
 <div class="container center">
+    <header>
+        <div class="logo"><a href="#">Thrivetalk</a></div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </nav>
+        <div>
+            <a class="button button__white bg__blue radius  " href="#">CONTACT
+            US</a>
+        </div>
+    </header>
     <div class="top relative">
         <div class="top__main-picture absolute"><img src="img/top/main.svg" alt="#"></div>
         <div class="top__fon-picture absolute"><img src="img/top/fon.svg" alt="#"></div>
         <div class="top__left">
-            <div class="top__header flex relative">
-                <div class="top__header__mark">Thrivetalk</div>
-                <div class="top__header__links flex">
-                    <div class="top__header__link"><a href="#">Home</a></div>
-                    <div class="top__header__link"><a href="#">About</a></div>
-                    <div class="top__header__link"><a href="#">Service</a></div>
-                    <div class="top__header__link"><a href="#">Blog</a></div>
-                </div>
-            </div>
             <div class="top__introduction relative">
-                <div class="top__introduction__mark">Thrivetalk</div>
+                <div class="top__introduction__mark"></div>
                 <div class="top__introduction__title"><h1>HELPING YOU THRIVE IN ALL AREAS OF LIFE</h1></div>
                 <div class="top__introduction__text"><p>Our highly talented therapists can help you with a range of
                     issues
@@ -40,8 +46,6 @@
             </div>
         </div>
         <div class="top__right">
-            <div class="top__right__button"><a class="button button__white bg__blue radius absolute" href="#">CONTACT
-                US</a></div>
         </div>
     </div>
     <!-- /.top -->
