--- a/index.html
+++ b/index.html
@@ -26,22 +26,33 @@
         </div>
     </header>
     <div class="top relative">
-        <div class="top__main-picture absolute"><img src="img/top/main.svg" alt="#"></div>
-        <div class="top__fon-picture absolute"><img src="img/top/fon.svg" alt="#"></div>
+        <div class="top__main-picture absolute">
+            <img src="img/top/main.svg" alt="#">
+        </div>
+        <div class="top__fon-picture absolute">
+            <img src="img/top/fon.svg" alt="#">
+        </div>
         <div class="top__left">
             <div class="top__introduction relative">
                 <div class="top__introduction__mark"></div>
-                <div class="top__introduction__title"><h1>HELPING YOU THRIVE IN ALL AREAS OF LIFE</h1></div>
-                <div class="top__introduction__text"><p>Our highly talented therapists can help you with a range of
+                <div class="top__introduction__title">
+                    <h1>HELPING YOU THRIVE IN ALL AREAS OF LIFE</h1>
+                </div>
+                <div class="top__introduction__text">
+                    <p>Our highly talented therapists can help you with a range of
                     issues
                     including relationships, sex, PTSD, depression, social anxiety, or even just caring for yourself
                     more.</p>
                 </div>
                 <div class="top__buttons flex">
-                    <div class="top__button"><a class="button button__white bg__orange" href="#">WHO
-                        AM I</a></div>
-                    <div class="top__button"><a class="button button__orange" href="#">WHAT DO I
-                        DO</a></div>
+                    <div class="top__button">
+                        <a class="button button__white bg__orange" href="#">WHO
+                        AM I</a>
+                    </div>
+                    <div class="top__button">
+                        <a class="button button__orange" href="#">WHAT DO I
+                        DO</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -65,7 +76,9 @@
     <!-- /.thrive -->
     <div class="about-us">
         <div class="about-us__top flex">
-            <div class="about-us__title"><h5>ABOUT US</h5></div>
+            <div class="about-us__title">
+                <h5>ABOUT US</h5>
+            </div>
             <div class="about-us__text">
                 <p>We want to help you thrive! Whether you are just looking for someone to talk to, or are struggling
                     with a
@@ -76,34 +89,48 @@
                     more.</p>
             </div>
         </div>
-        <div class="about-us__proposition"><h5>WE CAN HELP YOU WITH</h5></div>
+        <div class="about-us__proposition">
+            <h5>WE CAN HELP YOU WITH</h5>
+        </div>
         <div class="about-us__line flex">
             <div class="about-us__block pink">
                 <div class="about-us__block__box box">
-                    <div class="about-us__block__point point-padding"><img src="img/point.svg" alt="#">
+                    <div class="about-us__block__point point-padding">
+                        <img src="img/point.svg" alt="#">
                     </div>
-                    <div class="about-us__block__text"><h3>Weight Lifting</h3></div>
+                    <div class="about-us__block__text">
+                        <h3>Weight Lifting</h3>
+                    </div>
                 </div>
             </div>
             <div class="about-us__block greenLight">
                 <div class="about-us__block__box box">
-                    <div class="about-us__block__point point-padding"><img src="img/point.svg" alt="#">
+                    <div class="about-us__block__point point-padding">
+                        <img src="img/point.svg" alt="#">
                     </div>
-                    <div class="about-us__block__text"><h3>Running & Spinning</h3></div>
+                    <div class="about-us__block__text">
+                        <h3>Running & Spinning</h3>
+                    </div>
                 </div>
             </div>
             <div class="about-us__block blue">
                 <div class="about-us__block__box box">
-                    <div class="about-us__block__point point-padding"><img src="img/point.svg" alt="#">
+                    <div class="about-us__block__point point-padding">
+                        <img src="img/point.svg" alt="#">
                     </div>
-                    <div class="about-us__block__text"><h3>Pumping Iron</h3></div>
+                    <div class="about-us__block__text">
+                        <h3>Pumping Iron</h3>
+                    </div>
                 </div>
             </div>
             <div class="about-us__block lightBlue">
                 <div class="about-us__block__box box blue">
-                    <div class="about-us__block__point point-padding"><img src="img/point.svg" alt="#">
+                    <div class="about-us__block__point point-padding">
+                        <img src="img/point.svg" alt="#">
                     </div>
-                    <div class="about-us__block__text"><h3>Pumping Iron</h3></div>
+                    <div class="about-us__block__text">
+                        <h3>Pumping Iron</h3>
+                    </div>
                 </div>
             </div>
         </div>
@@ -112,43 +139,61 @@
     <div class="offers flex">
         <div class="offers__block dark">
             <div class="offers__box box">
-                <div class="offers__block__point point-padding"><img src="img/point.svg" alt="#"></div>
-                <div class="offers__block__text"><h3>Physical Health</h3>
+                <div class="offers__block__point point-padding">
+                    <img src="img/point.svg" alt="#">
+                </div>
+                <div class="offers__block__text">
+                    <h3>Physical Health</h3>
                 </div>
             </div>
         </div>
         <div class="offers__block lightBlue">
             <div class="offers__box box">
-                <div class="offers__block__point point-padding"><img src="img/point.svg" alt="#"></div>
-                <div class="offers__block__text"><h3>Mental Health</h3>
+                <div class="offers__block__point point-padding">
+                    <img src="img/point.svg" alt="#">
+                </div>
+                <div class="offers__block__text">
+                    <h3>Mental Health</h3>
                 </div>
             </div>
         </div>
         <div class="offers__block picture">
             <div class="offers__box box">
-                <div class="offers__block__point point-padding"><img src="img/point.svg" alt="#"></div>
-                <div class="offers__block__text"><h3>Nutrition</h3>
+                <div class="offers__block__point point-padding">
+                    <img src="img/point.svg" alt="#">
+                </div>
+                <div class="offers__block__text">
+                    <h3>Nutrition</h3>
                 </div>
             </div>
         </div>
         <div class="offers__block blue">
             <div class="offers__box box">
-                <div class="offers__block__point point-padding"><img src="img/point.svg" alt="#"></div>
-                <div class="offers__block__text"><h3>Gymnastics</h3>
+                <div class="offers__block__point point-padding">
+                    <img src="img/point.svg" alt="#">
+                </div>
+                <div class="offers__block__text">
+                    <h3>Gymnastics</h3>
                 </div>
             </div>
         </div>
         <div class="offers__block coral">
             <div class="offers__box box">
-                <div class="offers__block__point point-padding"><img src="img/point.svg" alt="#"></div>
-                <div class="offers__block__text"><h3>Crossfit</h3>
+                <div class="offers__block__point point-padding">
+                    <img src="img/point.svg" alt="#">
+                </div>
+                <div class="offers__block__text">
+                    <h3>Crossfit</h3>
                 </div>
             </div>
         </div>
         <div class="offers__block purple">
             <div class="offers__box box">
-                <div class="offers__block__point point-padding"><img src="img/point.svg" alt="#"></div>
-                <div class="offers__block__text"><h3>Aerobics</h3>
+                <div class="offers__block__point point-padding">
+                    <img src="img/point.svg" alt="#">
+                </div>
+                <div class="offers__block__text">
+                    <h3>Aerobics</h3>
                 </div>
             </div>
         </div>
@@ -157,50 +202,70 @@
     <div class="description flex">
         <div class="description__block">
             <div class="description__box">
-                <div class="description__title"><h4>Nutritional Plans</h4></div>
-                <div class="description__text"><h5>Nutritional Facts on some shitty things that you don’t
+                <div class="description__title">
+                    <h4>Nutritional Plans</h4>
+                </div>
+                <div class="description__text">
+                    <h5>Nutritional Facts on some shitty things that you don’t
                     care about and even we don’t , I need to replace this copy.</h5></div>
             </div>
         </div>
         <div class="description__block">
             <div class="description__box">
-                <div class="description__title"><h4>Weight Loss</h4></div>
-                <div class="description__text"><h5>Nutritional Facts on some shitty things that you don’t
+                <div class="description__title">
+                    <h4>Weight Loss</h4>
+                </div>
+                <div class="description__text">
+                    <h5>Nutritional Facts on some shitty things that you don’t
                     care about and even we don’t , I need to replace this copy.</h5></div>
             </div>
         </div>
         <div class="description__block">
             <div class="description__box">
-                <div class="description__title"><h4>Mental Peace</h4></div>
-                <div class="description__text"><h5>Nutritional Facts on some shitty things that you don’t
+                <div class="description__title">
+                    <h4>Mental Peace</h4>
+                </div>
+                <div class="description__text">
+                    <h5>Nutritional Facts on some shitty things that you don’t
                     care about and even we don’t , I need to replace this copy.</h5></div>
             </div>
         </div>
         <div class="description__block">
             <div class="description__box">
-                <div class="description__title"><h4>Home Training</h4></div>
-                <div class="description__text"><h5>Nutritional Facts on some shitty things that you don’t
+                <div class="description__title">
+                    <h4>Home Training</h4>
+                </div>
+                <div class="description__text">
+                    <h5>Nutritional Facts on some shitty things that you don’t
                     care about and even we don’t , I need to replace this copy.</h5></div>
             </div>
         </div>
         <div class="description__block">
             <div class="description__box">
-                <div class="description__title"><h4>Work/Life Balance</h4></div>
-                <div class="description__text"><h5>Nutritional Facts on some shitty things that you don’t
+                <div class="description__title">
+                    <h4>Work/Life Balance</h4>
+                </div>
+                <div class="description__text">
+                    <h5>Nutritional Facts on some shitty things that you don’t
                     care about and even we don’t , I need to replace this copy.</h5></div>
             </div>
         </div>
         <div class="description__block">
             <div class="description__box">
-                <div class="description__title"><h4>Cardio</h4></div>
-                <div class="description__text"><h5>Nutritional Facts on some shitty things that you don’t
+                <div class="description__title">
+                    <h4>Cardio</h4>
+                </div>
+                <div class="description__text">
+                    <h5>Nutritional Facts on some shitty things that you don’t
                     care about and even we don’t , I need to replace this copy.</h5></div>
             </div>
         </div>
     </div>
     <!-- /.description -->
     <div class="also flex">
-        <div class="also__picture"><img src="img/also/picture.png" alt="#"></div>
+        <div class="also__picture">
+            <img src="img/also/picture.png" alt="#">
+        </div>
         <div class="also__info">
             <h5>YOU SHOULD ALSO KNOW</h5>
             <h2 class="bold">MDD affects more than 16.1 million American adults, or about 6.7%of the U.S. population age 18 and
